[gd_scene load_steps=11 format=2]

[ext_resource path="res://Img/Atributos/Agua-status.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Sede.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "1"
length = 3.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3, 3.3, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=3]
resource_name = "3"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=4]
resource_name = "4"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=5]
resource_name = "5"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36 ]
}

[sub_resource type="Animation" id=6]
resource_name = "6"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 37, 38 ]
}

[sub_resource type="Animation" id=7]
resource_name = "7"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 39, 40 ]
}

[sub_resource type="Animation" id=8]
resource_name = "8"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45, 46, 47, 48 ]
}

[node name="Sede" type="Node"]
script = ExtResource( 2 )

[node name="Agua-status" type="Sprite" parent="."]
position = Vector2( 16, 56 )
texture = ExtResource( 1 )
hframes = 7
vframes = 7

[node name="AnimationSede" type="AnimationPlayer" parent="Agua-status"]
anims/1 = SubResource( 1 )
anims/2 = SubResource( 2 )
anims/3 = SubResource( 3 )
anims/4 = SubResource( 4 )
anims/5 = SubResource( 5 )
anims/6 = SubResource( 6 )
anims/7 = SubResource( 7 )
anims/8 = SubResource( 8 )

[node name="TimerSede" type="Timer" parent="."]
wait_time = 8.0

[connection signal="timeout" from="TimerSede" to="." method="_on_TimerSede_timeout"]
